# pico_epaper_clock

./: CMakeLists.txt  epaper.cpp  epaper.h  imgconv.py  main.cpp
